--- a/kids1.html
+++ b/kids1.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<div><center><h2>KIDS'S APPAREL</h2></center></div>
+<div><center><h2>KIDS'S APPAREL HUGE RANGE FOR KIDS</h2></center></div>
 <div align="center">
 <a href="mbaby.html"><img src="images/babytoy.jpg" width="769" height="328"></a><br>
 <a href="mgirl.html"><img src="images/girl.jpg"></a>
